@@ -1,6 +1,10 @@
 release 1.1.5 (2010)
 
 release 1.1.4 (2009-11)
+- Fixed issue 393
+  https://jersey.dev.java.net/issues/show_bug.cgi?id=393
+  Headers may be added to the multi-valued map returned from 
+  Response.getMetadata().
 - Fixed issue 391
   https://jersey.dev.java.net/issues/show_bug.cgi?id=390
   The Jersey servlet-layer catches a MappableContainerException and will
